# scd30_i2c

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  scd30.rs
